<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PersonalActivity" >

    <include
        android:id="@+id/include1"
        layout="@layout/carguard_activity_top" />

    <RelativeLayout
        android:id="@+id/personal_precontent"
        android:layout_below="@id/include1"
        android:layout_width="match_parent"
        android:layout_height="197dp" >
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:background="@drawable/personal_bg"
            android:contentDescription="@string/empty_description" />
        <ImageButton
            android:id="@+id/ib_personal_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar"
            android:contentDescription="@string/empty_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="32dp"
            android:textColor="#666666"
            android:textSize="16sp"
            android:text="@string/personal_account_tip" />

        <TextView
            android:id="@+id/tv_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="32dp"
            android:textColor="#666666"
            android:textSize="16sp"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="57dp"
            android:textColor="#666666"
            android:textSize="16sp"
            android:text="@string/personal_integral_tip" />

        <TextView
            android:id="@+id/tv_integral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="57dp"
            android:textColor="#666666"
            android:textSize="16sp"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="82dp"
            android:textColor="#666666"
            android:textSize="16sp"
            android:text="@string/personal_balance_tip" />

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="82dp"
            android:textColor="#666666"
            android:textSize="16sp"
            android:text="" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="160dp"
           	android:paddingLeft="15dp"
            android:gravity="center_vertical"
            android:background="#FCFCFC"
            android:textColor="#555555"
            android:textSize="16sp"
            android:textStyle="italic"
            android:text="@string/personal_my_prizes" />
       
       <TextView
           android:layout_width="match_parent"
           android:layout_height="0.1dp"
           android:background="#999999"
           android:layout_marginTop="196dp" />

    </RelativeLayout>
    
    <FrameLayout
        android:id="@+id/personal_content"
        android:layout_below="@id/personal_precontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
       
       <ListView
           android:id="@+id/lv_prize_content"
           android:layout_width="match_parent"
           android:layout_height="match_parent" >
           
       </ListView>
        
    </FrameLayout>

</RelativeLayout>